<resources>
    <string name="app_name">FitnessApp</string>
    <string name="your_reg">Your regular physical activity level?</string>
    <string name="this_help">This helps us create your personalized plan</string>
    <string name="how_old_are_you">How old are you ?</string>
    <string name="this_helps_us">This helps us create your personalized plan</string>
    <string name="tell_us_about_yourself">Tell us about yourself!</string>
    <string name="to_give_you">To give you a better experience we need to know your gender</string>
    <string name="what_s_your_goal">What’s your goal?</string>
    <string name="cm">cm</string>
    <string name="what_s_your_height">What’s your height?</string>
    <string name="today_workout_plan">Today Workout Plan</string>
    <string name="workout_categories">Workout Categories</string>
    <string name="new_workouts">New Workouts</string>
    <string name="mon_26_apr">Mon 26 Apr</string>
    <string name="see_all">See All</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advance">Advance</string>
    <string name="finished_workouts">Finished Workouts</string>
    <string name="_10_00">10:00</string>
    <string name="_25_00">25:00</string>
    <string name="flash_cycling">Flash Cycling</string>
    <string name="m">M</string>
    <string name="s">S</string>
    <string name="f">F</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="_1">1</string>
    <string name="october">October</string>
    <string name="_2021">2021</string>
    <string name="newText">New</string>
    <string name="events">Events</string>
    <string name="all">All</string>
    <string name="notifications">Notifications</string>
    <string name="you_can_manage">You can manage your app notification permission in your Phone Settings</string>
    <string name="workout_reminders">Workout Reminders</string>
    <string name="program_notifications">Program Notifications</string>
    <string name="meet_your_coach">Meet your coach, start your journey</string>
    <string name="create_a_workout">Create a workout plan to stay fit</string>
    <string name="action_is_the">Action is the key to all success</string>
    <string name="skip">Skip</string>
    <string name="starting_position">Starting position - calm stance, shoulders deployed, legs slightly bent, arms lowered or slightly spread apart. You sit down on the leg in the direction of which you plan to roll (doesn’t work? Then stretching exercises will help you!). Lower the knee of the \"rolling leg\" to the ground and at the same time put your palms on the ground a little higher and on both sides of it.</string>
    <string name="simple_warm_up_exercises">Simple Warm-Up Exercises</string>
    <string name="units_of_measure">Units of Measure</string>
    <string name="metric">Metric</string>
    <string name="imperal">Imperal</string>
    <string name="what_s_your_weight">What’s your weight?</string>
    <string name="you_can_always">You can always change this later</string>
    <string name="kg">kg</string>
    <string name="_04_workouts">04 Workouts for Beginner</string>
    <string name="day_01_warm_up">Day 01 - Warm Up</string>
    <string name="want_your_body">Want your body to be healthy. Join our program with directions according to body’s goals. Increasing physical strength is the goal of strenght training. Maintain body fitness by doing physical exercise at least 2-3 times a week.</string>
    <string name="_0">0</string>
</resources>