<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.insight.InsightFragment">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/finished_workouts"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/background_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/icon_graphics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="144dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/background_card_insight"
                app:layout_constraintBottom_toTopOf="@+id/imageView16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btnSeeAll2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/_10_00"
                android:textColor="@color/orange"
                app:layout_constraintBottom_toBottomOf="@+id/textView16"
                app:layout_constraintStart_toStartOf="@+id/textView20"
                app:layout_constraintTop_toBottomOf="@+id/textView20"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/finished_workouts"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@+id/imageView15"
                app:layout_constraintTop_toTopOf="@+id/imageView15" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/background_card_insight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView15" />

            <TextView
                android:id="@+id/btnSeeAll3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_25_00"
                android:textColor="@color/orange"
                app:layout_constraintStart_toStartOf="@+id/textView21"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/flash_cycling"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@+id/imageView15"
                app:layout_constraintTop_toTopOf="@+id/imageView16" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="@+id/imageView15"
                app:layout_constraintEnd_toEndOf="@+id/imageView15"
                app:layout_constraintTop_toTopOf="@+id/imageView15" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView16"
                app:layout_constraintTop_toTopOf="@+id/imageView16" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/icon_button_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/icon_button_right"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBackMonday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/background_day_black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toStartOf="@+id/ivBackTuesday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivBackTuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_day_black"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackMonday"
        app:layout_constraintEnd_toStartOf="@+id/ivBackWednesday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivBackMonday" />

    <ImageView
        android:id="@+id/ivBackWednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_day_black"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackTuesday"
        app:layout_constraintEnd_toStartOf="@+id/ivBackThursday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivBackTuesday" />

    <ImageView
        android:id="@+id/ivBackThursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_day_black"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackWednesday"
        app:layout_constraintEnd_toStartOf="@+id/ivBackFriday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivBackWednesday" />

    <ImageView
        android:id="@+id/ivBackFriday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_day_black"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackThursday"
        app:layout_constraintEnd_toStartOf="@+id/ivBackSaturday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivBackThursday" />

    <ImageView
        android:id="@+id/ivBackSaturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_day_black"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackFriday"
        app:layout_constraintEnd_toStartOf="@+id/ivBackSunday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivBackFriday" />

    <ImageView
        android:id="@+id/ivBackSunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:src="@drawable/background_day_black"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackSaturday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivBackSaturday" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/m"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/ivBackMonday"
        app:layout_constraintStart_toStartOf="@+id/ivBackMonday"
        app:layout_constraintTop_toTopOf="@+id/ivBackMonday" />

    <TextView
        android:id="@+id/textView67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/s"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/ivBackSunday"
        app:layout_constraintStart_toStartOf="@+id/ivBackSunday"
        app:layout_constraintTop_toTopOf="@+id/textView65" />

    <TextView
        android:id="@+id/textView65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/s"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/ivBackSaturday"
        app:layout_constraintStart_toStartOf="@+id/ivBackSaturday"
        app:layout_constraintTop_toTopOf="@+id/textView63" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/f"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/ivBackFriday"
        app:layout_constraintStart_toStartOf="@+id/ivBackFriday"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/t"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/ivBackThursday"
        app:layout_constraintStart_toStartOf="@+id/ivBackThursday"
        app:layout_constraintTop_toTopOf="@+id/textView58" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/w"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/ivBackWednesday"
        app:layout_constraintStart_toStartOf="@+id/ivBackWednesday"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/t"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/ivBackTuesday"
        app:layout_constraintStart_toStartOf="@+id/ivBackTuesday"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/tvMonday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackMonday"
        app:layout_constraintEnd_toEndOf="@+id/ivBackMonday"
        app:layout_constraintStart_toStartOf="@+id/ivBackMonday" />

    <TextView
        android:id="@+id/textView69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/october"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/textView70"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/_2021"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView69"
        app:layout_constraintEnd_toStartOf="@+id/imageView36"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView69"
        app:layout_constraintTop_toTopOf="@+id/textView69" />

    <TextView
        android:id="@+id/tvSunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMonday"
        app:layout_constraintEnd_toEndOf="@+id/ivBackSunday"
        app:layout_constraintStart_toStartOf="@+id/ivBackSunday" />

    <TextView
        android:id="@+id/tvSaturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMonday"
        app:layout_constraintEnd_toEndOf="@+id/ivBackSaturday"
        app:layout_constraintStart_toStartOf="@+id/ivBackSaturday" />

    <TextView
        android:id="@+id/tvFriday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMonday"
        app:layout_constraintEnd_toEndOf="@+id/ivBackFriday"
        app:layout_constraintStart_toStartOf="@+id/ivBackFriday" />

    <TextView
        android:id="@+id/tvThursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMonday"
        app:layout_constraintEnd_toEndOf="@+id/ivBackThursday"
        app:layout_constraintStart_toStartOf="@+id/ivBackThursday" />

    <TextView
        android:id="@+id/tvWednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMonday"
        app:layout_constraintEnd_toEndOf="@+id/ivBackWednesday"
        app:layout_constraintStart_toStartOf="@+id/ivBackWednesday" />

    <TextView
        android:id="@+id/tvTuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMonday"
        app:layout_constraintEnd_toEndOf="@+id/ivBackTuesday"
        app:layout_constraintStart_toStartOf="@+id/ivBackTuesday" />

</androidx.constraintlayout.widget.ConstraintLayout>